--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 .Rhistory
 .RData
 .Ruserdata
+.MSFD-QA-GFSM-A-DP.Rroj
+# exclude everything except directory foo/b
+/Data_QA_Process_V4_2021/*
+/Regional Boundaries Maps and Data/*
+/Raw_Data/*
